# rusty-spotted-cat

./: Cargo.toml  LICENSE  Makefile  README.md
src/: direction.rs  down_pounce_builder.rs  engine_config.rs  error.rs  file_transfer_record.rs  http_breakpoint.rs  ids.rs  lib.rs  log.rs  meow_client.rs  meow_config.rs  pounce_task.rs  prepare_outcome.rs  transfer_executor_trait.rs  transfer_status.rs  transfer_task.rs  up_pounce_builder.rs
src/dflt/: default_http_client.rs  mod.rs
src/inner/: active_state.rs  chunk_outcome.rs  executor.rs  group_state.rs  inner_task.rs  mod.rs  scheduler_state.rs  sign.rs  task_callbacks.rs  transfer_scheduler_state.rs  transfer_snapshot.rs  worker_event.rs
src/inner/exec_impl/: emit.rs  exec.rs  handle_worker_event.rs  mod.rs  retry.rs
tests/: callback_panic_test.rs  chunk_retry_test.rs  download_protocol_validation_test.rs  download_test.rs  pause_resume_test.rs  task_not_found_test.rs  upload_test.rs
tests/dev_server/: mod.rs
