[package]
name = "rusty-spotted-cat"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
description = "Rust library from the rusty-spotted-cat project; see the repository for scope and usage."
license = "MIT"
repository = "https://github.com/0barman/rusty-spotted-cat"
readme = "README.md"
keywords = ["library"]
categories = ["development-tools"]

[dependencies]
