[package]
name = "rusty-spotted-cat"
version = "0.1.1"
edition = "2021"
description = "Async HTTP client for resumable file upload and download."
license = "MIT"
repository = "https://github.com/0barman/rusty-spotted-cat"
readme = "README.md"
keywords = ["async", "download", "http", "upload", "resume"]
categories = ["asynchronous", "network-programming"]

[dependencies]
uuid = { version = "1.23.0", features = ["v7"] }
tokio = { version = "1.50.0", default-features = false, features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "io-util",
    "fs",
] }
reqwest = { version = "0.12.28", default-features = false, features = [
    "multipart",
    "rustls-tls",
] }
async-trait = "0.1.89"
tokio-util = "0.7.18"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
md5 = "0.7"

[dev-dependencies]
# 集成测试里使用 tokio::time::sleep；库代码本身不需要 time feature
tokio = { version = "1.50.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "time",
] }